[RWLT-42] - Move modal close btn inside cartModal, fix cartModal spacing for mobile devices

--- a/src/components/Cart/Container/CartContainer.scss
+++ b/src/components/Cart/Container/CartContainer.scss
@@ -1,13 +1,5 @@
 @import "src/base-styles/dependencies";
 
-.cart__container__button {
-  background: transparent;
-  border: none;
-  color: $color-icon;
-  cursor: pointer;
-  font-size: 24px;
-}
-
 @media (max-width: $md) {
   .cart__container {
     height: 190%;
@@ -65,7 +57,7 @@
 @media (min-width: $lg) {
   .cart__container {
     .cart__container--active {
-      width: 40%;
+      width: 37.5em;
     }
   }
 }
